Fix class variable cache not invalidated by class_variable_set

The previous invalidation walked subclasses but missed cvars from
included modules, and skipped invalidation when creating a new cvar on
modules entirely. Always invalidate when a new class variable is
created, since this should be relatively rare.

We previously bumped the global state on any module inclusion, which
should be far more common than this.

[Bug #21978]